# paco

./: .gitignore  AGENTS.md  Makefile  README.md  a.c  context.md  go.mod  go.sum  main.go  pkged.go  test  test.paco
compiler/: Cargo.toml
compiler/paco-borrow/: Cargo.toml
compiler/paco-borrow/src/: lib.rs
compiler/paco-codegen-cranelift/: Cargo.toml
compiler/paco-codegen-cranelift/src/: lib.rs
compiler/paco-codegen-llvm/: Cargo.toml
compiler/paco-codegen-llvm/src/: lib.rs
compiler/paco-diag/: Cargo.toml
compiler/paco-diag/src/: lib.rs
compiler/paco-diag/tests/: reporter.rs
compiler/paco-driver/: Cargo.toml
compiler/paco-driver/src/: lib.rs  main.rs
compiler/paco-driver/tests/: check_borrowing.rs  check_data_types.rs  check_ownership.rs  check_phase_four.rs  check_phase_two.rs  cli.rs  conformance.rs  run_core_programs.rs  run_data_types.rs  run_pattern_matching.rs  run_phase_one.rs  run_phase_three.rs  run_phase_two.rs
compiler/paco-eval/: Cargo.toml
compiler/paco-eval/src/: lib.rs
compiler/paco-hir/: Cargo.toml
compiler/paco-hir/src/: lib.rs
compiler/paco-hir/tests/: phase_two.rs
compiler/paco-link/: Cargo.toml
compiler/paco-link/src/: lib.rs
compiler/paco-match/: Cargo.toml
compiler/paco-match/src/: lib.rs
compiler/paco-match/tests/: usefulness.rs
compiler/paco-mir/: Cargo.toml
compiler/paco-mir/src/: lib.rs
compiler/paco-resolve/: Cargo.toml
compiler/paco-resolve/src/: lib.rs
compiler/paco-span/: Cargo.toml
compiler/paco-span/src/: lib.rs
compiler/paco-span/tests/: source_map.rs
compiler/paco-syntax/: Cargo.toml
compiler/paco-syntax/src/: ast.rs  fmt.rs  lex.rs  lib.rs  parse.rs
compiler/paco-syntax/tests/: ast_visit.rs  lex.rs  parse.rs
compiler/paco-test-harness/: Cargo.toml
compiler/paco-test-harness/src/: lib.rs
compiler/paco-test-harness/tests/: golden_discovery.rs
compiler/paco-types/: Cargo.toml
compiler/paco-types/src/: lib.rs
compiler/paco-types/tests/: basic_type_errors.rs  data_types.rs  pattern_matching.rs  phase_one.rs
core/: CMakeLists.txt  a.out  buildlib.sh  console.c  console.h  main.c  math.c  math.h  random.c  random.h  stdio.pacomod  strings.c  strings.h
examples/: conditions.paco  entry.paco  hello.paco  random.paco  syntax.paco
generator/: assignment.go  call.go  condition.go  function.go  (+4 more)
(+74 files in other folders)
