[package]
name = "paco-borrow"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
paco-diag.workspace = true
paco-hir.workspace = true
paco-span.workspace = true
paco-syntax.workspace = true
paco-types.workspace = true

[lib]
path = "src/lib.rs"
